<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Locale Calendar Plugin</string>
    <string name="plugin_name">Calendar</string>
    <string name="calendar_prompt">Choose Calendar</string>
    <string name="calendar_state_prompt">Choose Calendar Status</string>
    <string name="setting_name">Calendar</string>
    <string name="status_any">free or busy</string>
    <string name="status_busy">busy</string>
    <string name="status_free">free</string>
    <string name="lead_time">Lead Time</string>
    <string name="lead_time_0min">No lead time</string>
    <string name="lead_time_5min">5 minutes</string>
    <string name="lead_time_10min">10 minutes</string>
    <string name="lead_time_5min_short">5min</string>
    <string name="lead_time_10min_short">10min</string>
    <string name="exclusion_prompt">Title must not contain:</string>
    <string name="inclusion_prompt">Title contains:</string>
    <string name="location_exclusion_prompt">Location must not contain:</string>
    <string name="location_inclusion_prompt">Location contains:</string>
    <string name="availability_status">Availability</string>
    <string name="ignore_all_day_entries">Ignore all day events</string>
    <string name="preview_title">Preview Matching Entries</string>
    <string name="menu_save">Save</string>
    <string name="menu_cancel">Don\'t Save</string>
    <string name="menu_help">Help</string>
    <string name="menu_preview">Preview</string>


    <!-- A toast message that appears if an application that is being launched isn't available.  There is no character length maximum, although this message will only appear on the screen for about 5 seconds in a Toast message so it should be short enough to be comprehended before it disappears -->
    <string name="twofortyfouram_locale_application_not_available">Application is not installed.</string>

    <!-- A format string for breadcrumbs.  For left to right languages, such as English, the format will look something like "Main Activity > Sub Activity > Sub Activity 2".  Item #1 is the previous path, item #2 is the separator, and item #3 is the current item   -->
    <string name="twofortyfouram_locale_breadcrumb_format">%1$s%2$s%3$s</string>

    <!-- The separator character for breadcrumbs -->
    <string name="twofortyfouram_locale_breadcrumb_separator">" &gt; "</string>

    <!-- The title of the MarketActivity.  MDPI 21 character maximum -->
    <string name="twofortyfouram_locale_marketactivity_dialog_title"><i>Locale</i> Required</string>

    <!-- The button that performs a search for the app on the Market or on <www.twofortyfouram.com>.  MDPI 17 character maximum -->
    <string name="twofortyfouram_locale_marketactivity_dialog_button_install">Install</string>

    <!-- The primary message of the MarketActivity dialog.  There is no character length maximum -->
    <string name="twofortyfouram_locale_marketactivity_dialog_primary_message"><i>Locale</i> is required to use this plug-in.  Would you like to install <i>Locale</i>?</string>

     <!-- The secondary message of the MarketActivity dialog.  The word "Install" should match the twofortyfouram_locale_marketactivity_dialog_button_install string.  There is no character length maximum -->
    <string name="twofortyfouram_locale_marketactivity_dialog_secondary_message">Tap \"Install\" to find <i>Locale</i> on the Android Market.</string>
</resources>
